Fixing jumping footer on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -246,7 +246,7 @@ a:focus-visible {
 
 .dash-footer {
   font-size: 1rem;
-  position: sticky;
+  /* position: sticky; */
   bottom: 0;
   z-index: 1;
   background-color: var(--BGCOLOR);
@@ -257,6 +257,8 @@ a:focus-visible {
   justify-content: flex-start;
   gap: 1em;
   align-items: center;
+  position: fixed;
+  /* bottom: 10px; */
 }
 
 .dash-footer__button {
